operator/tests/snapshots/render_snapshots__empty_dir_pod_volumes.snap
---
source: operator/tests/render_snapshots.rs
expression: volumes(&state)
---
- emptyDir:
    sizeLimit: 200Gi
  name: model-cache
