operator/tests/snapshots/render_snapshots__existing_claim_pod_volumes.snap
---
source: operator/tests/render_snapshots.rs
expression: volumes(&state)
---
- name: model-cache
  persistentVolumeClaim:
    claimName: shared-models
