operator/tests/snapshots/render_snapshots__minimal_deployment.snap
---
source: operator/tests/render_snapshots.rs
expression: state.deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mx-min
    app.kubernetes.io/managed-by: modelexpress-operator
    app.kubernetes.io/name: modelexpress-server
  name: mx-min
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mx-min
      app.kubernetes.io/name: modelexpress-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mx-min
        app.kubernetes.io/managed-by: modelexpress-operator
        app.kubernetes.io/name: modelexpress-server
    spec:
      containers:
        - env:
            - name: MX_METADATA_BACKEND
              value: kubernetes
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: MODEL_EXPRESS_SERVER_PORT
              value: "8001"
            - name: MODEL_EXPRESS_CACHE_DIRECTORY
              value: /var/cache/modelexpress
          image: "nvcr.io/nvidia/ai-dynamo/modelexpress-server:0.5.0"
          livenessProbe:
            grpc:
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 30
          name: server
          ports:
            - containerPort: 8001
              name: grpc
          readinessProbe:
            grpc:
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 30
            grpc:
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /var/cache/modelexpress
              name: model-cache
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: mx-min-server
      volumes:
        - emptyDir: {}
          name: model-cache
