operator/tests/snapshots/render_snapshots__tls_deployment.snap
---
source: operator/tests/render_snapshots.rs
expression: state.deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mx-tls
    app.kubernetes.io/managed-by: modelexpress-operator
    app.kubernetes.io/name: modelexpress-server
  name: mx-tls
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mx-tls
      app.kubernetes.io/name: modelexpress-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mx-tls
        app.kubernetes.io/managed-by: modelexpress-operator
        app.kubernetes.io/name: modelexpress-server
    spec:
      containers:
        - env:
            - name: MX_METADATA_BACKEND
              value: kubernetes
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: MODEL_EXPRESS_SERVER_PORT
              value: "8001"
            - name: MODEL_EXPRESS_CACHE_DIRECTORY
              value: /var/cache/modelexpress
            - name: MODEL_EXPRESS_TLS_CERT_FILE
              value: /etc/modelexpress/tls/tls.crt
            - name: MODEL_EXPRESS_TLS_KEY_FILE
              value: /etc/modelexpress/tls/tls.key
            - name: MODEL_EXPRESS_TLS_MIN_VERSION
              value: VersionTLS13
            - name: MODEL_EXPRESS_TLS_CIPHER_SUITES
              value: "TLS_AES_128_GCM_SHA256,TLS_AES_256_GCM_SHA384,TLS_CHACHA20_POLY1305_SHA256"
            - name: MODEL_EXPRESS_TLS_GROUPS
              value: "X25519MLKEM768,X25519,secp256r1,secp384r1"
          image: "nvcr.io/nvidia/ai-dynamo/modelexpress-server:0.5.0"
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 30
            tcpSocket:
              port: 8001
          name: server
          ports:
            - containerPort: 8001
              name: grpc
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8001
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8001
          volumeMounts:
            - mountPath: /var/cache/modelexpress
              name: model-cache
            - mountPath: /etc/modelexpress/tls
              name: tls
              readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: mx-tls-server
      volumes:
        - emptyDir: {}
          name: model-cache
        - name: tls
          secret:
            secretName: mx-tls
