operator/tests/snapshots/render_snapshots__tls_service.snap
---
source: operator/tests/render_snapshots.rs
expression: state.service
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: mx-tls
  labels:
    app.kubernetes.io/instance: mx-tls
    app.kubernetes.io/managed-by: modelexpress-operator
    app.kubernetes.io/name: modelexpress-server
  name: mx-tls
spec:
  ports:
    - name: grpc
      port: 8001
      targetPort: grpc
  selector:
    app.kubernetes.io/instance: mx-tls
    app.kubernetes.io/name: modelexpress-server
